# yaytracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
libs/glad/: CMakeLists.txt
libs/glad/glad/include/glad/: glad.h
libs/glad/glad/src/: glad.c
libs/imgui/: CMakeLists.txt
libs/lua/: CMakeLists.txt
yaytracer/: CMakeLists.txt
yaytracer/src/: app.cpp  app.hpp  arcana.hpp  common.hpp  logging.cpp  logging.hpp  main.cpp  parallel.hpp  random.hpp
yaytracer/src/event/: event.hpp
yaytracer/src/graphics/: camera.cpp  camera.hpp  color.hpp  intersection.hpp  ray.hpp  raytracer.cpp  raytracer.hpp  scene.cpp  scene.hpp  sphere.hpp
yaytracer/src/input/: key.cpp  key.hpp
yaytracer/src/math/: math.hpp  vector.hpp
yaytracer/src/rendering/: pixel_buffer.cpp  pixel_buffer.hpp  renderer.cpp  renderer.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
